--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,8 @@
         <div>회원가입</div>  <!-- B#4 -->
         <div>about</div>  <!-- A#8 -->
         <div>관리자</div>  <!-- B#6 -->
-    </header>
+        <div>장바구니</div>  <!-- B#12 [feature/cart] -->
+    </header> 
     <article>본문입니다 <!-- A#3 -->
         <section>기사1</section> <!-- A#5 -->
         <section>기사2</section> <!-- A#5 -->
